--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ nav a:hover {
     position: absolute;
     width: 600px;
     height: 600px;
-    background-image: url('beautiful-planets-space.jpg');
+    background-image: url('ImgFold/beautiful-planets-space.jpg');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
